--- a/assets/style.css
+++ b/assets/style.css
@@ -24,5 +24,6 @@ header button
 	border-radius: 10px;
 	padding: 8px 22px;
 	font-family: 'Helvetica Neue', sans-serif;
+	font-size: 16px;
 	color: #fff;
 }
