--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,7 @@ header
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0 120px;
+	padding: 16px 120px;
 }
 header button
 {
