--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@ header .header-top
 	align-items: center;
 	padding: 16px 120px;
 }
-header button
+header .header-top button
 {
 	background: #18abe3;
 	border: none;
