--- a/assets/style.css
+++ b/assets/style.css
@@ -27,3 +27,7 @@ header .header-top button
 	font-size: 16px;
 	color: #fff;
 }
+header .header-content
+{
+	background: url('img/header-bg.png');
+}
