--- a/assets/style.css
+++ b/assets/style.css
@@ -33,3 +33,7 @@ header .header-content
 	background: url('img/header-bg.png');
 	padding: 0 120px;
 }
+header .header-content p
+{
+	font-size: 28px;
+}
