--- a/assets/style.css
+++ b/assets/style.css
@@ -32,6 +32,7 @@ header .header-content
 {
 	height: 640px;
 	display: flex;
+	align-items: center;
 	background: url('img/header-bg.png');
 	padding: 0 120px;
 }
