--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-@import url('http://fonts.cdnfonts.com/css/helvetica-neue-9');
 *
 {
 	margin: 0;
@@ -8,8 +7,7 @@
 }
 body
 {
-	font-family: 'Helvetica Neue', sans-serif;
-	font-family: 'Helvetica 65 Medium', sans-serif;
+	font-family: Helvetica, Sans-Serif;
 }
 header .header-top
 {
@@ -24,8 +22,9 @@ header .header-top button
 	border: none;
 	border-radius: 10px;
 	padding: 10px 22px;
-	font-family: 'Helvetica Neue', sans-serif;
+	font-family: Helvetica, Sans-Serif;
 	font-size: 16px;
+	font-weight: 700;
 	color: #fff;
 }
 header .header-content
