--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,7 @@ header .header-content p
 	font-size: 28px;
 	font-weight: 400;
 	color: #fff;
+	line-height: 42px;
 }
 header .header-content p span
 {
