--- a/assets/style.css
+++ b/assets/style.css
@@ -56,6 +56,7 @@ header .header-content p span
 }
 .company .company-content
 {
+	width: 310px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
