--- a/assets/style.css
+++ b/assets/style.css
@@ -68,3 +68,7 @@ header .header-content p span
 	color: #004e84;
 	text-align: center;
 }
+.company .company-content h1 span
+{
+	color: #3a4856;
+}
