--- a/assets/style.css
+++ b/assets/style.css
@@ -181,7 +181,7 @@ img#back-to-top
 {
 	width: 40px;
 	height: 40px;
-	color: #aeaeae;
+	color: #3a4856;
 	border: 1px solid #aeaeae;
 	border-radius: 50%;
 	transform: translateY(50%);
