--- a/assets/style.css
+++ b/assets/style.css
@@ -182,7 +182,7 @@ img#back-to-top
 	width: 40px;
 	height: 40px;
 	color: #3a4856;
-	border: 1px solid #aeaeae;
+	border: 1px solid #3a4856;
 	border-radius: 50%;
 	transform: translateY(50%);
 }
