Penyesuaian Posisi Swiper Button Prev & Next - Media Max Width 1400px

--- a/assets/style.css
+++ b/assets/style.css
@@ -296,4 +296,12 @@ footer p
 	{
 		padding: 60px 180px;
 	}
+	.swiper-button-prev
+	{
+		left: 80px;
+	}
+	.swiper-button-next
+	{
+		right: 80px;
+	}
 }
