--- a/assets/style.css
+++ b/assets/style.css
@@ -64,6 +64,7 @@ header .header-content p
 	font-weight: 400;
 	color: #fff;
 	line-height: 42px;
+	z-index: 1;
 }
 header .header-content p span
 {
