Penetapan Justify Content - Header Content

--- a/assets/style.css
+++ b/assets/style.css
@@ -350,6 +350,10 @@ footer p
 		flex-direction: column;
 		padding: 40px 40px 60px;
 	}
+	header .header-content
+	{
+		justify-content: center;
+	}
 	header .header-content p
 	{
 		text-align: center;
