--- a/assets/style.css
+++ b/assets/style.css
@@ -115,6 +115,10 @@ img#back-to-top
 	padding: 60px 220px;
 	text-align: center;
 }
+.swiper-slide
+{
+	height: 520px;
+}
 .ellipse-2
 {
 	position: absolute;
@@ -176,6 +180,10 @@ img#back-to-top
 {
 	text-align: left;
 	margin-top: 46px;
+}
+.swiper-pagination
+{
+	bottom: 0 !important;
 }
 .swiper-button-prev
 {
@@ -378,5 +386,11 @@ footer p
 	.our-stories
 	{
 		padding: 60px;
+	}
+	.swiper-button-prev,
+	.swiper-button-next
+	{
+		transform: unset;
+		margin-top: 270px;
 	}
 }
