Penghapusan Height Swiper Slide - Media Max Width 1127px

--- a/assets/style.css
+++ b/assets/style.css
@@ -392,6 +392,14 @@ footer p
 	{
 		padding: 60px;
 	}
+	.swiper-slide
+	{
+		height: unset;
+	}
+	.our-stories .card
+	{
+		flex-direction: column;
+	}
 	.swiper-button-prev,
 	.swiper-button-next
 	{
