--- a/assets/style.css
+++ b/assets/style.css
@@ -43,6 +43,7 @@ header .header-content
 	align-items: center;
 	background: url('img/header-bg.png');
 	background-size: cover;
+	background-position: right;
 	padding: 0 120px 60px;
 	border-bottom: 1px solid #fff;
 }
