--- a/assets/style.css
+++ b/assets/style.css
@@ -416,6 +416,10 @@ footer p
 
 @media (max-width: 676px)
 {
+	header .header-top img
+	{
+		width: 180px;
+	}
 	header .header-content p
 	{
 		font-size: 20px;
