--- a/assets/style.css
+++ b/assets/style.css
@@ -418,6 +418,11 @@ footer p
 	{
 		margin-left: unset;
 	}
+	.our-stories .card .content span
+	{
+		top: -296px;
+		left: -2px;
+	}
 	.member-login .content
 	{
 		width: 100%;
