--- a/assets/style.css
+++ b/assets/style.css
@@ -492,14 +492,20 @@ footer p
 	{
 		font-size: 14px;
 	}
-	header .header-content img:last-child
+	.ellipse-1
 	{
-		width: 100%;
+		position: absolute;
+		top: 110px;
+		left: 24px;
 	}
 	header .header-content p
 	{
 		font-size: 20px;
 		line-height: 30px;
+	}
+	header .header-content img:last-child
+	{
+		width: 100%;
 	}
 	.company .company-content h1,
 	.our-stories h1, .member-login .content h1
