Penyesuaian Posisi Left H4 Content Card - Media Max Width 1127px

--- a/assets/style.css
+++ b/assets/style.css
@@ -434,6 +434,11 @@ footer p
 	{
 		margin-top: 21px;
 	}
+	.our-stories .card .content h4
+	{
+		top: 0;
+		left: 156px;
+	}
 	.swiper-button-prev
 	{
 		left: 30%;
