Penyesuaian Posisi Top H4 Content Card Our Stories - Media Max Width 1127px

--- a/assets/style.css
+++ b/assets/style.css
@@ -436,8 +436,8 @@ footer p
 	}
 	.our-stories .card .content h4
 	{
-		top: 0;
-		left: 156px;
+		top: -60px;
+		left: 128px;
 	}
 	.swiper-button-prev
 	{
