--- a/assets/style.css
+++ b/assets/style.css
@@ -583,6 +583,15 @@ footer p
 	}
 }
 
+@media (max-width: 375px)
+{
+	header .header-content
+	{
+		background: url('img/header-bg-mobile.png');
+		background-size: cover;
+	}
+}
+
 @media
 only screen and (-webkit-min-device-pixel-ratio: 1.5),
 only screen and (-o-min-device-pixel-ratio: 3/2),
