--- a/assets/login.css
+++ b/assets/login.css
@@ -9,4 +9,5 @@ header
 	justify-content: space-between;
 	align-items: center;
 	padding: 16px 120px;
+	box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.05);
 }
