--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@ header .header-top
 	align-items: center;
 	padding: 16px 120px;
 }
-header .header-top button,
+header .header-top a,
 .company button,
 .member-login .content button
 {
@@ -31,7 +31,7 @@ header .header-top button,
 {
 	display: none;
 }
-header .header-top button a,
+header .header-top a,
 .company button a,
 .member-login .content button a
 {
@@ -490,7 +490,7 @@ footer p
 	{
 		width: 180px;
 	}
-	header .header-top button a,
+	header .header-top a,
 	.company button a,
 	.member-login .content button a,
 	.our-stories p, .member-login .content .form input
