Penghapusan Text Decoration - Anchor H4 Header Login CSS

--- a/assets/login.css
+++ b/assets/login.css
@@ -16,6 +16,10 @@ header div
 	display: flex;
 	align-items: center;
 }
+header div h4 a
+{
+	text-decoration: none;
+}
 
 @media (max-width: 1400px)
 {
