Penetapan Posisi H4 Before - Login CSS

--- a/assets/login.css
+++ b/assets/login.css
@@ -51,6 +51,9 @@ header div span
 .container .sidebar h4::before
 {
 	position: absolute;
+	content: '';
+	top: 0;
+	left: 0;
 }
 
 @media (max-width: 1400px)
