--- a/assets/login.css
+++ b/assets/login.css
@@ -48,6 +48,7 @@ header div span
 	position: relative;
 	color: #fff;
 	margin-left: 28px;
+	margin-bottom: 36px;
 }
 .container .sidebar h4.active::before
 {
