Penetapan Object Fit & Object Position - Img Card Main Login CSS

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -94,6 +94,8 @@ header div span
 {
 	width: 734px;
 	height: 415px;
+	object-fit: cover;
+	object-position: center;
 }
 
 @media (max-width: 1400px)
