Penetapan Padding Footer - Login CSS

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -96,6 +96,10 @@ header div span
 	object-fit: cover;
 	object-position: center;
 }
+footer
+{
+	padding: 24px;
+}
 
 @media (max-width: 1400px)
 {
