--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -35,10 +35,19 @@ header .nav span
 }
 header .btn-menu
 {
+	width: 32px;
+	height: 32px;
 	position: absolute;
 	right: 24px;
 	display: none;
 	cursor: pointer;
+}
+header i
+{
+	color: #fff;
+	background: #18abe3;
+	border-radius: 50%;
+	padding: 10px 11px;
 }
 header .side-nav
 {
